--- a/package.json
+++ b/package.json
@@ -1,18 +1,35 @@
 {
     "private": true,
-    "type": "module",
     "scripts": {
-        "dev": "vite",
-        "build": "vite build"
+        "dev": "npm run development",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
+        "prod": "npm run production",
+        "production": "mix --production"
     },
     "devDependencies": {
-        "@tailwindcss/forms": "^0.5.2",
-        "@tailwindcss/typography": "^0.5.0",
-        "autoprefixer": "^10.4.7",
-        "axios": "^1.6.1",
-        "laravel-vite-plugin": "^0.8.0",
-        "postcss": "^8.4.14",
-        "tailwindcss": "^3.1.0",
-        "vite": "^4.0.0"
+        "axios": "^0.21",
+        "css-loader": "^6.7.3",
+        "laravel-mix": "^6.0.49",
+        "lodash": "^4.17.19",
+        "mini-css-extract-plugin": "^2.7.5",
+        "postcss": "^8.1.14",
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.62.1",
+        "sass-loader": "^13.2.2",
+        "vue": "^2.7.5",
+        "vue-loader": "^16.8.3",
+        "vue-template-compiler": "^2.7.13"
+    },
+    "dependencies": {
+        "cleave.js": "^1.6.0",
+        "jquery": "^3.6.0",
+        "laravel-echo": "^1.15.1",
+        "pusher-js": "^8.0.2",
+        "signature_pad": "^4.1.3",
+        "vue-select": "^3.20.0",
+        "vue-select2": "^0.2.6"
     }
 }
