--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "laravel-echo": "^1.15.1",
         "pusher-js": "^8.0.2",
         "signature_pad": "^4.1.3",
+        "vite": "^5.1.4",
         "vue-select": "^3.20.0",
         "vue-select2": "^0.2.6"
     }
